hithub-actions-samples/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8050 
  selector:
    app: hello-gitops
  type: ClusterIP
