hithub-actions-samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gitops
  namespace: hello-gitops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # to change
  rules:
  - host: hello-gitops.example.com # to set
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-gitops
            port:
              number: 80
